review: fix modernizer violations, clarify test comments